--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	"dependencies": {
 		"@astrojs/mdx": "4.0.8",
 		"@astrojs/rss": "4.0.11",
-		"@astrojs/sitemap": "3.2.1",
+		"@astrojs/sitemap": "^3.6.0",
 		"@astrojs/tailwind": "6.0.0",
 		"@cloudflare/pages-plugin-mailchannels": "0.1.5",
 		"astro": "^5.16.0",
